--- a/003-projeto-cli/package.json
+++ b/003-projeto-cli/package.json
@@ -12,6 +12,7 @@
     "test": "jest --no-cache --watch-all --coverage",
     "test:ci": "jest --no-cache --coverage"
   },
+  "bin":{ "vfull": "./dist/index.js"},
   "author": "",
   "license": "ISC",
   "devDependencies": {
