--- a/004-crawler-manipulando-arquivos-text/package.json
+++ b/004-crawler-manipulando-arquivos-text/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "003-projeto-cli",
+  "name": "boilerplate-com-jest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "npx tsx  ./src/index.ts",
+    "start:dev": "npx tsx watch ./src/index.ts",
     "start": "node ./dist/index.js",
     "build": "tsc --build tsconfig.build.json && tsup src --minify",
     "prettier": "prettier --write ./src/**/*.ts",
@@ -12,17 +12,12 @@
     "test": "jest --no-cache --watch-all --coverage",
     "test:ci": "jest --no-cache --coverage"
   },
-  "bin": {
-    "vfull": "./dist/index.js"
-  },
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.1",
     "@types/node": "^20.1.1",
     "@types/puppeteer": "^7.0.4",
-    "@types/shelljs": "^0.8.15",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "eslint": "^8.40.0",
@@ -37,8 +32,6 @@
     "typescript": "^5.0.4"
   },
   "dependencies": {
-    "inquirer": "^8.0.0",
-    "puppeteer": "^21.10.0",
-    "shelljs": "^0.8.5"
+    "puppeteer": "^20.9.0"
   }
 }
